[tool.poetry]
name = "py-random-data-generator-api"
version = "0.1.0"
description = ""
authors = ["Paul Matthews <paul@paulmatthews.dev>"]

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
Faker = "^13.6.0"
email-validator = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
